--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@
 
 user nginx;
 worker_processes auto;
-error_log /var/log/nginx/error.log;
+error_log /var/log/nginx/error.log notice;
 pid /run/nginx.pid;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
@@ -23,7 +23,6 @@ http {
 
     sendfile            on;
     tcp_nopush          on;
-    tcp_nodelay         on;
     keepalive_timeout   65;
     types_hash_max_size 4096;
 
